# VishnuCast

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gradle.properties  mock_update_server.py  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/debug/res/xml/: network_security_config_debug.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: client.js  index.html
app/src/main/cpp/: CMakeLists.txt  NativePlayerSource.cpp  NativePlayerSource.h  NativePlayerSourceWebRtc.cpp  NativePlayerSourceWebRtc.h  PlayerJniBridge.cpp  PlayerSendEngine.cpp  PlayerSendEngine.h  mix_adm_jni.cc  mix_adm_stub.cc  vishnu_adm.cc  vishnuplayer.cpp  vishnuplayer.h  webrtc_keyfunc_shim.cpp
app/src/main/java/com/buligin/vishnucast/: AboutActivity.kt  ApkDownloader.kt  App.kt  CastService.kt  ClientCount.kt  DragOnlySeekBar.kt  HintArrowView.kt  HttpServer.kt  Logger.kt  MainActivity.kt  MicLevelProbe.kt  NetUtils.kt  NetworkMonitor.kt  PeerManager.kt  PeerManagers.kt  QrCodeGenerator.kt  SettingsActivity.kt  SignalLevel.kt  SignalingSocket.kt  UpdateCheckWorker.kt  UpdateChecker.kt  UpdateManager.kt  UpdateProgressDialog.kt  UpdateProtocol.kt  VishnuServer.kt  WebRtcCore.kt
app/src/main/java/com/buligin/vishnucast/audio/: AudioMixer.kt  ExoTeeAudioProcessor.kt  MixBus48k.kt  MixBusBridge.kt  MixWavDumper.kt  MixedAudioDeviceModule.kt  MixerEngine.kt  MixerState.kt  NativeAdm.kt  NativeBridge.kt  PlayerCore.kt  PlayerPcmBus.kt  PlaylistItem.kt  PlaylistStore.kt  TeeRenderersFactory.kt  VcMix.kt  WebRtcSource.kt
app/src/main/java/com/buligin/vishnucast/player/: ExoGuard.kt  MixerState.kt  PlayerCore.kt  PlayerPcmRing.kt  PlayerUiBinder.kt  PlaylistActivity.kt  PlaylistAdapter.kt  PlaylistItem.kt  PlaylistStore.kt  RingTapAudioProcessor.kt  VishnuRenderersFactory.kt
app/src/main/java/com/buligin/vishnucast/player/capture/: PlayerCapture.kt  PlayerSystemCapture.kt  PlayerSystemCaptureCompat.kt
app/src/main/java/com/buligin/vishnucast/player/jni/: PlayerJni.kt
app/src/main/java/com/buligin/vishnucast/pleer/: PlayerUiBinder.kt  PlaylistActivity.kt
app/src/main/java/com/buligin/vishnucast/service/: MixerState.kt
app/src/main/java/com/buligin/vishnucast/ui/: PlayerUiBinder.kt  PlaylistActivity.kt  PlaylistAdapter.kt
app/src/main/res/anim/: arrow_nudge_left.xml  arrow_nudge_right.xml
app/src/main/res/color/: btn_cast_bg.xml  btn_cast_ripple.xml  btn_cast_text.xml  switch_track_tint.xml
app/src/main/res/drawable/: bg_info_card.xml  bg_status_pill.xml  ic_add_24.xml  ic_chevron.xml  ic_chevron_left.xml  ic_chevron_right.xml  ic_clear_all_24.xml  ic_delete_24.xml  ic_pause_24.xml  ic_play_24.xml  ic_power_24.xml  ic_skip_next_24.xml  ic_skip_previous_24.xml  signal_level_bar.xml  slider_progress.xml  slider_thumb.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_playlist.xml  activity_settings.xml  dialog_update_progress.xml  include_player_panel.xml  playlist_item.xml
app/src/main/res/menu/: main_menu.xml  menu_playlist.xml
app/src/main/res/values/: colors.xml  strings.xml  strings_cast.xml  strings_cast_agc.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings_cast.xml  strings_cast_agc.xml
app/src/main/res/xml/: file_paths.xml  filepaths.xml
app/src/test/java/com/buligin/vishnucast/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: Export-Release.ps1
